# try

./: .gitignore
blindreader/: tracer.c
cstring2struct/: Cargo.toml
cstring2struct/src/: main.rs
doublereader/: reader.c  tracer.c  writer.c
grpc_over_unix_socket/: CMakeLists.txt  greeter_client.cc  greeter_server.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  helloworld.proto
invisible_brk/: tracer.c  writer.c
invisible_brk_tidy/: tracer.c  writer.c
memcontrol/: tracer.c
mtrace/: mtrace.c
openasconnect/: client.c  server.c  tracer.c
strace_many_openat/: loop_echoing.c  loop_read_home_and_zshrc.c
sysjack/sysjack/: Cargo.toml  build.rs
sysjack/sysjack/src/: common.rs  ctrl.rs  lib.rs  main.rs  trace.rs  util.rs
sysjack/sysjack/src/x86_64/: mod.rs
unix_socket/: server.c
zeromq_helloworld/: client.c  server.c
